更新个人信息，修改头像文件格式，调整个人简介内容，添加社交媒体链接，简化研究背景描述。

--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ repository               : "zenghao-stat/zenghao-stat.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Hao Zeng"
-  pronouns         : # example: "she/her"  
-  bio              : "Postdoctoral Researcher in Statistics"
+  pronouns         : "he/him"  
+  bio              : "Postdoctoral"
   location         : "Shenzhen, China"
-  employer         : "Southern University of Science and Technology"
-  uri              : # URL
-  email            : # "your.email@example.com" 
+  employer         : "Southern University \\ of Science and Technology"
+  uri              : "https://zenghao-stat.github.io"
+  email            : "zenghao.stat@gmail.com" 
 
   # Academic websites
   academia         : # URL
