--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Hao Zeng / 曾浩"
+title                    : "Zhaoyu Xing/ 邢兆雨"
 title_separator          : "-"
-name                     : &name "Hao Zeng"
-description              : &description "Postdoctoral Researcher in Statistics"  
-url                      : https://zenghao-stat.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+name                     : &name "Zhaoyu Xing"
+description              : &description "Robert and Sara Lumpkins Postdoctoral Research Associate"  
+url                      : https://ZhaoyuXingStat.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "zenghao-stat/zenghao-stat.github.io"
+repository               : "ZhaoyuXingStat.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
