--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,4 +36,4 @@ main:
   
 # 在 ZhaoyuXingStat.github.io/_data/navigation.yml 文件中
 - title: "Photography"
-  url: "https://ZhaoyuXingStat.github.io/photography"
+  url: "https://ZhaoyuXingStat/photography"
