--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   avatar           : "profile.jpg"
   name             : "Zhaoyu Xing"
   pronouns         : # "he/him"  
-  bio              : "Postdoctoral"
+  bio              : "Postdoctoral Research Associate"
   location         : "South Bend, IN, U.S."
   employer         : "University of Notre Dame"
-  uri              : # "https://zenghao-stat.github.io"
+  uri              : "https://zhaoyuxingstat.github.io"
   email            : "zxing@nd.edu" 
 
   # Academic websites
@@ -39,7 +39,7 @@ author:
   orcid            : "https://orcid.org/0009-0002-4344-8684" # 
   semantic         : # URL
   pubmed           : # ""
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Zhaoyu-Xing" # URL
   scopus           : # URL
 
   # Repositories and software development
@@ -49,7 +49,7 @@ author:
   github           : "ZhaoyuXingStat"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
-
+  
   # Social media
   bluesky          : # "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
