--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,7 +36,7 @@ main:
   
 # ... 这里是其他链接，比如 Talks, Teaching 等 ...
 
-- title: "Photography"
+- title: "Photography Exhibition"
   url: "https://zhaoyuxingstat.github.io/photography"
 
 # ... 这里可能还有其他链接 ...
